--- a/Ants.cabal
+++ b/Ants.cabal
@@ -48,7 +48,7 @@ Cabal-version:       >=1.2
 
 Executable Ants
   -- .hs or .lhs file containing the Main module.
-  Main-is: Main.hs             
+  Main-is: Ant/Main.hs             
   
   -- Packages needed in order to build this package.
   Build-depends:  
@@ -59,7 +59,7 @@ Executable Ants
       vector >= 0.7.1.0     
   
   -- Modules not exported by this package.
-  Other-modules: Point, AntIO, World       
+  Other-modules: Ant.Point, Ant.IO, Ant.World       
   
   -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
   -- Build-tools:         
