--- a/Ants.cabal
+++ b/Ants.cabal
@@ -49,23 +49,33 @@ Flag Debug
   Description: Enable debug support
   Default:     False
 
--- Executable Ants
+Executable Ants
   -- .hs or .lhs file containing the Main module.
---  Main-is: Ant/Main.hs             
+  Main-is: Ant/Main.hs             
   
   -- Packages needed in order to build this package.
---  Build-depends:  
---      base >= 4, 
---      random >= 1.0, 
---      mtl >= 2.0, 
---      containers >= 0.4, 
---      vector >= 0.7.1.0,
---      split >= 0.1
-  
-  -- Modules not exported by this package.
---  Other-modules: Ant.Point, Ant.IO, Ant.Map, Ant.Square       
+  Build-depends:  
+      base >= 4, 
+      random >= 1.0, 
+      mtl >= 2.0, 
+      containers >= 0.4, 
+      vector >= 0.7.1.0,
+      split >= 0.1,
+      fingertree >= 0.0.1,
+      PSQueue >= 1.1   
 
---  ghc-options: -fllvm -O2 
+  if flag(debug) 
+    GHC-Options: -DDEBUG
+  else
+      CC-Options: "-DNDEBUG"
+
+  Extensions:      CPP
+      
+  if flag(debug)
+    CC-Options: "-DDEBUG"
+    GHC-Options: -DDEBUG    	  
+	  
+  ghc-options: -O2 -funbox-strict-fields
   -- -static -optl-pthread -optl-static
   -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
   -- Build-tools:         
