--- a/Ants.cabal
+++ b/Ants.cabal
@@ -75,46 +75,7 @@ Executable Ants
     CC-Options: "-DDEBUG"
     GHC-Options: -DDEBUG    	  
 	  
-  ghc-options: -O2 -funbox-strict-fields
-  -- -static -optl-pthread -optl-static
+  ghc-options: -O2 -funbox-strict-fields -static -optl-pthread -optl-static
   -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
   -- Build-tools:         
 
-  
-Executable Debugger
-  -- .hs or .lhs file containing the Main module.
-  Main-is: Ant/Debugger.hs             
-  
-  -- Packages needed in order to build this package.
-  Build-depends:  
-      base >= 4, 
-      random >= 1.0, 
-      mtl >= 2.0, 
-      containers >= 0.4, 
-      vector >= 0.7.1.0,
-      split >= 0.1,
-      cairo >= 0.12.2,
-      gtk   >= 0.12.2,
-      colour >= 2.3,
-      fingertree >= 0.0.1,
-      PSQueue >= 1.1
-
-  if flag(debug)
-    GHC-Options: -DDEBUG
-  else
-      CC-Options: "-DNDEBUG"
-
-  Extensions:      CPP
-      
-  if flag(debug)
-    CC-Options: "-DDEBUG"
-    GHC-Options: -DDEBUG            
-      
-  ghc-options: -threaded -O1 -funbox-strict-fields 
-      
-  
-  -- Modules not exported by this package.
-  -- Other-modules: Ant.Point, Ant.IO, Ant.Map, Ant.Square       
-  
-  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
-  -- Build-tools:         
